--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,7 +3,7 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
+.para.small-para {
   font-size: 12px;
 }
 
@@ -18,13 +18,13 @@
   font-weight: bold;
 } 
 
-.button {
+.button.cancel{
   background-color: #ffc0cb;
   color: black;
   font-size: 20px;
 }
 
-.child {
+.text .child {
   color: red;
   font-size: 14px;
 }
