--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
 }
 
 img {
@@ -16,6 +20,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px 20px;
 }
 
 input {
@@ -24,4 +29,41 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  list-style: none;
+  padding: 0px;
+  margin: 16px;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.footer{
+  background-color:#eeeeee;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 18px;
+}
+
+
+.content{
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+a {
+  color: hsl(0, 1%, 22%);
+  text-decoration: none;
+  
 }
